# dorian

./: .dockerignore  .gitignore  .gitmodules  .rayignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.engine  Dockerfile.gateway-rs  NOTICE.md  README.md  SETUP.md  config.yaml  docker-compose.engine.yml  docker-compose.override.yml  docker-compose.tooltips.yml  docker-compose.yml  go.mod  main.py  package-lock.json  package.json  playground.py  pyproject.toml
backend/: __init__.py  admin_auth.py  cache.py  config.py  envs.py  eventbus_authoritative.py  eventbus_elastic.py  eventbus_go_handled.py  eventbus_shadow.py  eventbus_subscriber.py  events.py  hmac_auth.py  models.py  queue.py  rate_limit.py  utils.py  ws_rate_limit.py
config/: config.yaml.example
dorian/: __init__.py  dag.py  languages.py  operator.py  repository.py  scripts.py  types.py
engine/: Cargo.toml
engine/automl/: Cargo.toml
engine/automl/src/: config.rs  driver.rs  encoder.rs  lib.rs  materialise.rs  optimizer.rs  random.rs  smac.rs  surrogate.rs  trial.rs
engine/backend/: Cargo.toml
engine/backend/src/: config.rs  emit.rs  event.rs  exec_jobs.rs  experiment_store.rs  kb.rs  keys.rs  main.rs  pg.rs  registry.rs  session.rs  state.rs  subscriber.rs
engine/backend/src/handlers/: auto_task.rs  cancel.rs  cross_product_trials.rs  custom_nodes.rs  data_science_task.rs  dataset_live.rs  datasets.rs  evaluation_procedure.rs  execute_pipeline.rs  experiment_store.rs  extraction.rs  feedback.rs  heartbeat.rs  interactions.rs  kb_changed.rs  listeners.rs  mod.rs  notify.rs  observability.rs  onboarding.rs  pathway_evaluator.rs  pattern_gating.rs  pipeline.rs  python_dispatch.rs  ranking_objective.rs  recommendation.rs  recommendations_engine.rs  risk_chain.rs  risk_scope.rs  session.rs  session_meta.rs  session_seed.rs  slack.rs
engine/cache/: Cargo.toml
engine/cache/src/: arrow_store.rs  benefit.rs  index.rs  lib.rs  redis_store.rs
engine/cli/: Cargo.toml
engine/cli/src/: main.rs
engine/compose/: Cargo.toml
engine/compose/src/: lib.rs
engine/de/: Cargo.toml
engine/de/src/: lib.rs
engine/directors/: Cargo.toml
engine/directors/src/: cache_wrapper.rs  dataflow.rs  lib.rs  map_reduce.rs  message_passing.rs  sequential.rs
engine/dispatch/: Cargo.toml
engine/dispatch/src/: container.rs  dispatcher.rs  lib.rs  python.rs  runtime.rs  wasm.rs
engine/dorian-engines/: Cargo.toml
engine/dorian-engines/src/: main.rs
engine/engine/: Cargo.toml  build.rs
engine/engine/src/: events.rs  grpc.rs  lib.rs  main.rs  redis_cache.rs  state.rs
engine/extractor/: Cargo.toml
engine/extractor/src/: ast.rs  engine.rs  lib.rs  pattern.rs  rewrite.rs  rule.rs
engine/extractor/src/model/: core.rs  moc.rs  mod.rs
engine/gateway/: Cargo.toml
engine/gateway/src/: catalog.rs  config.rs  contact.rs  eventbus.rs  hmac_auth.rs  main.rs  proxy.rs  session.rs  state.rs  ws.rs
engine/graph/: Cargo.toml
engine/graph/examples/: dem_map_check.rs
engine/graph/src/: actor.rs  bktree.rs  dem.rs  ged.rs  lib.rs  model.rs  parser.rs  primitive.rs  rewrite.rs  rule_index.rs  topology.rs  validator.rs  weighted_ged.rs
engine/graph/src/expand/: categorical.rs  compound.rs  dataset.rs  mod.rs  printout.rs  state.rs
engine/graph/tests/: parity.rs
engine/native/: Cargo.toml  pyproject.toml
engine/native/src/: lib.rs
engine/optimizer/: Cargo.toml
engine/optimizer/examples/: build_kb_snapshot.rs
engine/optimizer/src/: kb_topology.rs  lib.rs  lowering.rs  meta_director.rs  ranking.rs  task_graph.rs
engine/optimizer/src/kb/: builder.rs  client.rs  mod.rs  queries.rs  resolution.rs  snapshot.rs  types.rs
engine/optimizer/src/recommendation/: mod.rs  objectives.rs  store.rs
engine/optimizer/src/risk/: identification.rs  mitigation.rs  mod.rs  pathway.rs  strategies.rs  suggestion.rs
engine/rl/: Cargo.toml
engine/rl/src/: lib.rs
engine/rl/src/policy/: base.rs  hedge.rs  mod.rs
engine/scaling/: Cargo.toml
engine/scaling/src/: config.rs  lib.rs  monitor.rs  policy.rs
engine/sdf/: Cargo.toml
engine/sdf/src/: lib.rs
engine/shadow/: Cargo.toml
engine/shadow/src/: lib.rs
engine/types/: Cargo.toml  build.rs
engine/types/src/: lib.rs
engine/xproduct/: Cargo.toml
engine/xproduct/src/: config.rs  engine.rs  lib.rs  main.rs  pairs.rs  queue.rs  reaper.rs
frontend/: Dockerfile  components.json  env.config.ts  frontend-description.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.ts
helpers/: bktree.py  build-parsers.py  checked_pipelines.csv  clean_cache.py  compose_errors.py  pattern-mining.py  populate-openml.py  populate-pipelines.py  scripts.psql  wrap-mongo.py
native/: Cargo.toml  pyproject.toml
native/python/dorian_native/: __init__.py
native/src/: bktree.rs  ged.rs  lib.rs  ranking.rs
proto/: buf.yaml  engine.proto  events.proto  execution.proto  graph.proto  runtime.proto  scaling.proto
rl/: __init__.py
scripts/: __init__.py  _config_export.py  export_kb_snapshot.py  generate_pipelines.py  openml_loader.py  seed_automl_templates.py  up.sh
tests/: conftest.py  test_admin_auth.py  test_cache.py  test_canonical_forms.py  test_column_profile.py  test_compound_expansion.py  test_contact_feedback.py  test_data_pathways.py  test_dataset_upload_binding.py  test_event_registry.py  test_eventbus_authoritative.py  test_eventbus_elastic.py  test_eventbus_go_handled.py  test_eventbus_per_type.py  test_eventbus_shadow.py  test_eventbus_subscriber.py  test_exception_handling.py  test_exec_engine.py  test_exec_engine_integration.py  test_execution_engine.py  test_extractor_integration.py  test_generation.py  test_mitigation_rewrites_migration.py  test_observability.py  test_pg_docstore_translator.py  test_pipeline_extractor.py  test_printout.py  test_quality_decision_functions.py  test_remaining_tabular_quality_metrics.py  test_rule_schema.py  test_rule_suggestions.py  test_seed_rewrite.py  test_session_meta_tx.py  test_shadow_engine.py  test_signature_registry.py  (+4 more)
(+538 files in other folders)
