[project]
name = "dorian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7,!=3.14.1"

dependencies = [
    "aenum>=3.1.16",
    "aiofiles>=24.1.0",
    "aioredis>=2.0.1",
    "classes>=0.4.1",
    "dask[complete]>=2025.9.1",
    "dynaconf>=3.2.11",
    "fastapi[all]>=0.118.0",
    "pendulum>=3.1.0",
    "termcolor>=3.1.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "scrapy>=2.9.0",
    "scrapy-splash>=0.9.0",
    "lxml>=5.2.0",
    "redis[hiredis]>=6.4.0",
    "pipe>=2.2",
    "pydantic>=2.0",
    "inflection>=0.5.1",
    "openml>=0.15.1",
    "msgpack>=1.1",
    "psutil>=6.1",
    "asyncpg>=0.30.0",
    "networkx>=3.6.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "cryptography>=44.0",
    "slowapi>=0.1.9",
    "limits[redis]>=3.6.0",
    "openrouter>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
]
flaml = [
    # Warm-start prior seeder — see rl/priors/flaml_seeder.py.
    # Optional because only the one-shot seeder imports these;
    # backend / rl-trainer runtime never references them.
    "flaml>=2.5",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

[tool.setuptools.packages.find]
include = ["dorian*", "backend*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Collect test_*.py files and *_test.py files.
python_files  = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Suppress noisy deprecation warnings from third-party packages.
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["dorian", "backend"]
omit   = ["*/test_*.py", "*_test.py", "*/conftest.py"]

[tool.coverage.report]
# Show lines that are not covered by any test.
show_missing = true
# Fail the coverage step if total coverage drops below this threshold.
fail_under   = 40

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
]
