[package]
name = "automl"
description = "AutoML BO core — modular Optimizer trait, SMAC3-style RF surrogate + EI"
version.workspace = true
edition.workspace = true

[dependencies]
optimizer          = { workspace = true }   # KB snapshot reader
serde              = { workspace = true }
serde_json         = { workspace = true }
rand               = "0.8"
thiserror          = { workspace = true }
tracing            = { workspace = true }
rustc-hash         = { workspace = true }
uuid               = { workspace = true }
# Driver-side persistence + queueing dependencies. Used by the BO loop
# (poll templates, ingest trials, submit to task_queue).
tokio              = { workspace = true }
tokio-postgres     = { workspace = true }
deadpool-postgres  = { workspace = true }
redis              = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }

[dev-dependencies]
