[package]
name        = "backend"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Rust backend — retiring backend/ + dorian/event/handlers/* (Python)."

[[bin]]
name = "dorian-backend"
path = "src/main.rs"

[dependencies]
# Runtime
tokio              = { workspace = true }
tokio-stream       = { workspace = true }

# Storage
redis              = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow             = { workspace = true }
thiserror          = { workspace = true }

# Serialization
serde              = { workspace = true }
serde_json         = { workspace = true }

# Time / IDs
uuid               = { workspace = true }
chrono             = { version = "0.4", default-features = false, features = ["clock"] }

# Internal crates
graph              = { workspace = true }
optimizer          = { workspace = true }
extractor          = { workspace = true }

# Data structures
rustc-hash         = { workspace = true }

# Postgres — per-collection doc_* tables JSONB document store
tokio-postgres     = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres  = "0.14"

# CSV reader — used by handle_auto_task_selection to inspect the
# target column's dtype + cardinality. Arrow's full columnar engine
# is overkill for "read one column, classify", and ``csv`` is one
# crate vs arrow's 30+. Swap to arrow-csv if multiple handlers grow
# the same need.
csv                = "1.3"

# Slack webhook client. Same flags as the gateway crate uses
# (rustls-tls, json) so we match the existing TLS stack and don't
# pull a second OpenSSL transitive dependency into the workspace.
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Slack-handler error-fingerprint dedup. Already in the workspace
# lockfile (used by graph + cache crates) so adding it here is
# zero net dependency cost.
sha2               = { workspace = true }

# Hot-swappable KbSnapshot: handle_kb_changed reloads the snapshot
# file on disk after a KB mutation and atomically swaps the live
# Arc the session_seed handler reads from. arc-swap is a fix for
# the "Arc<T> can't change without an RwLock that handlers would
# need to .await on read" bind. Already in the workspace lockfile
# transitively.
arc-swap           = "1"

[dev-dependencies]
tempfile           = "3"
