[package]
name = "de"
description = "Discrete Event domain scheduler — timestamped triggers, async firings"
version.workspace = true
edition.workspace = true

[dependencies]
graph      = { workspace = true }
cache      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
thiserror  = { workspace = true }
