[package]
name = "engine"
description = "Dorian engine composition root and gRPC server"
version.workspace = true
edition.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
types     = { workspace = true }
graph     = { workspace = true }
cache     = { workspace = true }
sdf       = { workspace = true }
de        = { workspace = true }
compose   = { workspace = true }
directors = { workspace = true }
optimizer = { workspace = true }
dispatch  = { workspace = true }
scaling   = { workspace = true }
tonic            = { workspace = true }
prost            = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
redis            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
uuid             = { workspace = true }
rustc-hash       = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
