[package]
name = "graph"
description = "ProcessGraph construction, validation, topological sort, GED, BK-Tree"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rustc-hash   = { workspace = true }
ordered-float = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
regex        = { workspace = true }
log          = { workspace = true }
