[package]
name = "types"
description = "Core type definitions for the Dorian engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
prost       = { workspace = true }
tonic       = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.13"
